style.css
/* ... */
.about__description {
  font-size: 1.6rem;
  color: var(--primary_color);
}

.about__divisor {
  background-color: var(--primary_color);
  width: 100%;
  padding: 0.5px;
  margin: 60px 0;
}

.about__btn {
  font-size: 1.6rem;
  text-transform: uppercase;
  text-decoration: none;
  color: var(--primary_color);
  display: flex;
  flex-direction: column;
  max-width: 50%;
  padding: 20px;
  border-left: 5px solid var(--secondary_color);
  gap: 10px;
  cursor: pointer;
  transition: 0.5s;
}

.about__btn:hover {
  opacity: 0.5;
}

.about__link i {
  font-size: 3rem;
}

.about__img {
  width: 100%;
  object-fit: cover;
  margin-left: 150px;
}

.about__video_popup {
  position: fixed;
  background-color: black;
  width: 100%;
  height: 100%;
  z-index: 99999;
  top: 0;
  left: 0;
  display: none;
}

.about__video_popup iframe {
  height: 100vh;
}

.about__video_popup_close {
  color: white;
  font-size: 2rem;
  position: absolute;
  top: 20px;
  right: 120px;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 15px;
  cursor: pointer;
}

/*PRODUCTS HOME SECTION*/
.section_products,
.section_news,
.section_location,
.section__post_content,
.dedicated_stores,
.concept_stores,
.essence_stores {
  padding: 60px 0;
}

.product__img {
  background-color: white;
  height: 350px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
  text-decoration: none;
  margin-bottom: 20px;
}

.product__img img {
  height: auto;
  object-fit: contain;
}

.product__card_img_btn {
  display: flex;
  flex-direction: column;
  text-transform: uppercase;
  justify-content: flex-start;
  width: 100%;
  margin-top: 20px;
  opacity: 0;
  transition: 0.5s;
}

.product__img:hover .product__card_img_btn {
  opacity: 1;
}

.product__title {
  color: var(--primary_color);
  font-size: 1.6rem;
  font-weight: 400;
  text-decoration: none;
}

.product__price {
  color: var(--primary_color);
  font-size: 1.4rem;
  font-weight: 300;
  text-decoration: none;
}

.product__category {
  color: var(--primary_color);
  font-size: 1.6rem;
  font-weight: 300;
  text-decoration: none;
}

.product__video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.section__products_video_info {
  background-color: var(--third_color);
  padding: 60px 120px 150px !important;
}

.divisor {
  width: 38%;
  padding: 0.5px;
  margin: 60px 0;
  position: absolute;
  left: 0;
}

.search__result_title {
  color: black;
  font-size: 3rem;
  font-weight: 400;
}

/*NEWS SECTION*/
.post__card {
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin-top: 20px;
  text-decoration: none;
}

.post__card img {
  height: 300px;
  width: 100%;
  object-fit: cover;
}

.post__card_title {
  display: -webkit-box;
  color: var(--primary_color);
  font-size: 2rem;
  font-weight: bold;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  text-decoration: none;
  height: 60px;
}

.post__card_text {
  display: -webkit-box;
  color: var(--primary_color);
  font-size: 1.6rem;
  font-weight: 300;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.post__card_btn {
  text-transform: uppercase;
  color: var(--primary_color);
  gap: 10px;
  text-decoration: none;
}

/*FORMS*/
input[type="text"],
input[type="email"] {
  height: 100%;
  font-family: Lato, arial;
  font-size: 0.1rem;
  font-weight: 400;
  line-height: 1em;
  color: var(--primary_color);
  border: none !important;
  border-bottom: 1px solid #8a817a !important;
  background: #fff !important;
}

select {
  height: 100%;
  font-family: Lato, arial;
  font-weight: 400;
  color: var(--primary_color);
  border: 0 !important;
  border-bottom: 1px solid #8a817a !important;
  background: #fff !important;
}

textarea {
  font-family: Lato, arial;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1em;
  color: var(--primary_color);
  border: 0 !important;
  border-bottom: 1px solid #8a817a !important;
  background: #fff !important;
}

#contato p {
  margin: 0 !important;
  height: 100%;
  text-align: right;
}

#contato .wpcf7-submit {
  background-color: transparent !important;
  padding: 0 !important;
  color: var(--primary_color);
  margin-right: 10px;
}

#contato .wpcf7-spinner {
  display: none;
}

.location__title {
  display: block;
  font-size: 3rem;
  color: var(--primary_color);
}

.location__info_wrapper {
  border-left: 4px solid #e6e4e1;
  padding-left: 20px !important;
  height: 100%;
}

.location__info {
  display: flex;
  flex-direction: column;
}

.location__phone {
  font-size: 1.6rem;
  font-weight: bold;
  color: var(--primary_color);
  text-decoration: none;
}

.location__subtitle {
  font-size: 2rem;
  font-weight: bold;
  color: var(--primary_color);
}

.location__text {
  font-size: 1.6rem;
  color: var(--primary_color);
  text-decoration: none;
}

.post__header {
  margin-bottom: 20px;
}

.post__title {
  font-size: 4rem;
  font-weight: bold;
  color: var(--primary_color);
}

.post__meta {
  font-size: 2rem;
  font-weight: bold;
  color: var(--primary_color);
}

.post__content {
  color: var(--primary_color);
  font-size: 1.6rem;
  text-align: justify;
}

.post__social_wrapper {
  font-size: 1.6rem;
  color: var(--primary_color);
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

/*ONDE ENCONTRAR*/
.dedicated_stores_carousel,
.concept_stores_carousel {
  width: 1320px !important;
  overflow: hidden;
  position: relative;
}

.swiper-button-next,
.swiper-button-prev {
  color: var(--primary_color) !important;
  font-size: 1rem !important;
}

.stores__card {
  height: 400px;
}

.stores__card__img_wrapper {
  height: 100%;
}

.stores__card img {
  width: 100%;
  max-height: 400px;
  height: 100%;
  object-fit: cover;
}
/* ... */

